--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/drum.css">
+    <link rel="stylesheet" href="drum.css">
 </head>
 <body>
     <h1 class="heading"><span>Drum</span> <img src="/images/drum_icon.png" alt=""> <span>Kit</span></h1>
@@ -23,6 +23,6 @@
         Made with ❤️ by Ace.
       </footer>
 
-      <script src="/drum.js"></script>
+      <script src="drum.js"></script>
 </body>
 </html>
