--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="drum.css">
 </head>
 <body>
-    <h1 class="heading"><span>Drum</span> <img src="/images/drum_icon.png" alt=""> <span>Kit</span></h1>
+    <h1 class="heading"><span>Drum</span> <img src="images/drum_icon.png" alt=""> <span>Kit</span></h1>
     <div class="container">
        <button class="w drum">w</button>
        <button class="a drum">a</button>
